myapp/src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    background-color: #0d0d0d;
   min-width: 650px;
}
.roboto-bold {
    font-family: "Roboto", system-ui;
    font-weight: 700;
    font-style: normal;
}
.oswald {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

